2008-12-21  Peter Hedwig  <peter@affenbande.org>

	* configure.in src/Makefile.am src/term.h term/Makefile.am.in
	term/lua/ChangeLog term/lua/gnuplot.lua term/lua/gnuplot-lua-tikz.sty
	term/lua/INSTALL term/lua/NEWS term/lua/README term/lua/TODO:

	Generic Lua terminal with PGF/TikZ support.
	The current implementation supports output via TikZ/pdflatex:
		set term lua standalone
		set output 'plot.tex'
		plot foo
		unset output
		!pdflatex plot

2008-12-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c (show_version) term/x11.trm (parse_driver):
	Do not overwrite the environmental variable GNUPLOT_DRIVER_DIR.

2008-12-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/graph3d.h:  More work on "set view equal {xy|xyz}'.
	It now works well for terminals with isotropic coordinate systems, but 
	unfortunately not for x11 or windows.

2008-12-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Replace assert() statements with int_warn().
	Fix handling of enhanced text for which the rotation angle is non-zero.
	Bug #2424595

2008-12-11  Bastian Maerkisch  <bmaerkisch@web.de>
            Axel Thimm <thimm@users.sourceforge.net>

	* configure.in NEWS src/command.c src/gp_hist.h src/graphics.c
	src/history.c src/plot.c src/readline.c src/readline.h src/show.c
	src/term_api.h src/term.c (term_initialise):

	./configure --with-readline=bsd
	Allow gnuplot to use the NetBSD editline library as an alternative to
	gnu readline. This adaptation was originally coded by Bastian Maerkisch
	and subsequently improved by Axel Thimm and by Tormod Volden.
	The routine term_init() is renamed to term_initialise()
	to avoid conflict with an identically named routine in libedit.
	SF Patch #1504831

2008-12-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c: Revise syntax of binary datafile record= and array=
	options. This allows the use of variables and expressions, adds several